--- a/site/minecraft.css
+++ b/site/minecraft.css
@@ -25,7 +25,7 @@ button {
     overflow: hidden;
     white-space: nowrap;
     user-select: none;
-    background: #999 url('https://i.ibb.co/rb2TWXL/bgbtn.png') center / cover;
+    background: #999 url("images/bgbtn.png") center / cover;
     image-rendering: pixelated;
     border: 2px solid #000;
     box-shadow: inset -2px -4px #0004, inset 2px 2px #FFF5;
@@ -35,7 +35,7 @@ button {
 }
 
 button:hover {
-    background: url('https://i.ibb.co/rb2TWXL/bgbtn.png') center / cover, rgba(100, 100, 255, 0.45);
+    background: url("images/bgbtn.png") center / cover, rgba(100, 100, 255, 0.45);
     background-blend-mode: overlay;
     color: #FFFFA0;
 }
